Gestion des permissions coté backend et frontend Intégration du login

--- a/frontend/src/app/components/earning-reports/earning-reports.component.html
+++ b/frontend/src/app/components/earning-reports/earning-reports.component.html
@@ -21,9 +21,9 @@
                     </a>
                 </mat-menu>
             </div>
-        </div>
+        </div>  
 
-        @for(stat of stats; track stat.color) {
+        <!-- @for(stat of stats; track stat.color) {
         <ul class="list-unstyled m-0">
             <li class="d-flex align-items-center justify-content-between p-y-18 b-b-1">
                 <div class="d-flex align-items-center">
@@ -46,7 +46,7 @@
                 </span>
             </li>
         </ul>
-        }
+        } -->
         <a href="javascript:void(0)"
             class="f-s-16 f-w-500 hover-text m-t-18 text-center d-block text-decoration-none text-dark">View
             more markets</a>
