--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -10,7 +10,7 @@
         <ng-scrollbar class="position-relative" style="height: 100%">
           <mat-nav-list class="sidebar-list">
             @for(item of navItems; track item) {
-            <app-nav-item [item]="item" (notify)="sidenav.toggle()">
+            <app-nav-item *ngIf="!item.roles || (!!role && item.roles?.includes(role))" [item]="item" (notify)="sidenav.toggle()">
             </app-nav-item>
             }
           </mat-nav-list>
