--- a/frontend/src/app/pages/auth/user/user-login/user-login.component.html
+++ b/frontend/src/app/pages/auth/user/user-login/user-login.component.html
@@ -56,12 +56,7 @@
               >Address électronique</mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input
-                matInput
-                name="email"
-                [formControl]="email"
-                required
-              />
+              <input matInput name="email" [formControl]="email" required />
               <mat-error *ngIf="email.hasError('required')">
                 L'email est requis.
               </mat-error>
@@ -69,7 +64,7 @@
                 Email invalide.
               </mat-error>
               <mat-error *ngIf="email.hasError('apiError')">
-                {{ email.getError('apiError') }}
+                {{ email.getError("apiError") }}
               </mat-error>
             </mat-form-field>
             <!-- password -->
@@ -88,7 +83,7 @@
                 Le mot de passe est requis.
               </mat-error>
               <mat-error *ngIf="password.hasError('apiError')">
-                {{ password.getError('apiError') }}
+                {{ password.getError("apiError") }}
               </mat-error>
             </mat-form-field>
 
@@ -114,7 +109,11 @@
           </form>
           <span class="d-block f-w-500 text-center m-t-24"
             >New to MaterialM?
-            <a class="text-decoration-none text-primary f-w-500 f-s-14">
+
+            <a
+              [routerLink]="['/auth/register']"
+              class="text-decoration-none text-primary f-w-500 f-s-14"
+            >
               Create an account</a
             >
           </span>
