--- a/frontend/src/app/pages/auth/user/user-register/user-register.component.html
+++ b/frontend/src/app/pages/auth/user/user-register/user-register.component.html
@@ -63,11 +63,15 @@
                     placeholder="Votre nom ..."
                     formControlName="first_name"
                   />
-                  <mat-error *ngIf="form.get('first_name')?.hasError('required')">
+                  <mat-error
+                    *ngIf="form.get('first_name')?.hasError('required')"
+                  >
                     Le nom est requis.
                   </mat-error>
-                  <mat-error *ngIf="form.get('first_name')?.hasError('apiError')">
-                    {{form.get('first_name')?.getError('apiError')}}
+                  <mat-error
+                    *ngIf="form.get('first_name')?.hasError('apiError')"
+                  >
+                    {{ form.get("first_name")?.getError("apiError") }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -83,11 +87,15 @@
                     placeholder="Votre prénom ..."
                     formControlName="last_name"
                   />
-                  <mat-error *ngIf="form.get('last_name')?.hasError('required')">
+                  <mat-error
+                    *ngIf="form.get('last_name')?.hasError('required')"
+                  >
                     Le prénom est requis.
                   </mat-error>
-                  <mat-error *ngIf="form.get('last_name')?.hasError('apiError')">
-                    {{form.get('last_name')?.getError('apiError')}}
+                  <mat-error
+                    *ngIf="form.get('last_name')?.hasError('apiError')"
+                  >
+                    {{ form.get("last_name")?.getError("apiError") }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -107,7 +115,7 @@
                     L'email est requis.
                   </mat-error>
                   <mat-error *ngIf="form.get('email')?.hasError('apiError')">
-                    {{form.get('email')?.getError('apiError')}}
+                    {{ form.get("email")?.getError("apiError") }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -127,7 +135,7 @@
                     Le téléphone est requis.
                   </mat-error>
                   <mat-error *ngIf="form.get('phone')?.hasError('apiError')">
-                    {{form.get('phone')?.getError('apiError')}}
+                    {{ form.get("phone")?.getError("apiError") }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -140,7 +148,12 @@
                   class="w-100"
                   color="primary"
                 >
-                  <input formControlName="password" matInput [type]="hide() ? 'password' : 'text'" placeholder="********" />
+                  <input
+                    formControlName="password"
+                    matInput
+                    [type]="hide() ? 'password' : 'text'"
+                    placeholder="********"
+                  />
                   <button
                     type="button"
                     mat-icon-button
@@ -157,14 +170,21 @@
                     Le mot de passe est requis.
                   </mat-error>
                   <mat-error *ngIf="form.get('password')?.hasError('apiError')">
-                    {{form.get('password')?.getError('apiError')}}
+                    {{ form.get("password")?.getError("apiError") }}
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
 
-            <button mat-flat-button color="primary" class="w-100" type="submit">
-              Sign Up
+            <button
+              mat-flat-button
+              color="primary"
+              class="w-100"
+              type="submit"
+              [disabled]="form.invalid || isLoading"
+            >
+              <span *ngIf="!isLoading">Sign Up</span>
+              <mat-spinner *ngIf="isLoading" diameter="24"></mat-spinner>
             </button>
             <!-- input -->
           </form>
