--- a/frontend/src/app/pages/appointments/client/client-booking-appointment/client-booking-appointment.component.html
+++ b/frontend/src/app/pages/appointments/client/client-booking-appointment/client-booking-appointment.component.html
@@ -45,6 +45,10 @@
           </div>
         </mat-step>
 
+        <mat-step [label]="'Véhicule'">
+          
+        </mat-step>
+
         <!-- Étape 2 : Date et heure -->
         <mat-step [label]="'Date et heure'">
           <div class="step-content">
