--- a/frontend/src/app/pages/vehicle-crud/vehicle-card/vehicle-card.component.html
+++ b/frontend/src/app/pages/vehicle-crud/vehicle-card/vehicle-card.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card [routerLink]="['/vehicles/' + vehicle.id]">
   <mat-card-content>
     <div class="card-container row justify-content-start">
       <div class="vehicle-icon col-auto">
