Ajout de footer avec nom

--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -37,11 +37,20 @@
         </main>
       </div>
 
-      <div class="p-16 p-t-8 p-b-30 text-center"> 
-        Design Developed by <a href="https://www.wrappixel.com/" target="_blank" class="text-decoration-none">WrapPixel.com</a>
-      </div>
+      <mat-card class="footer"> 
+        <ul>
+          <li>RAMIANDRISOA Tiavina Malalaniaina</li>
+          <li>RAMAROSON Andrivola Fanambony Benjamina</li>
+        </ul>
+      </mat-card>
 
     </mat-sidenav-content>
 
   </mat-sidenav-container>
 </div>
+<style>
+  .footer {
+    border-radius: 0!important;
+    margin-bottom: 0!important;
+  }
+</style>
