--- a/frontend/src/app/pages/appointment-detail/appointment-detail.component.html
+++ b/frontend/src/app/pages/appointment-detail/appointment-detail.component.html
@@ -4,7 +4,7 @@
       <h2>Détail du rendez-vous</h2>
     </mat-card-title>
     <div class="status-container">
-      <mat-chip (click)="role === 'manager' && payAppointment()">{{ isPaid ? 'Payé' : 'Non-payé' }}</mat-chip>
+      <mat-chip (click)="role === 'manager' && payAppointment()">{{ isPaid ? 'Non-payé' : 'Payé' }}</mat-chip>
       <mat-chip>{{ actualStatus }}</mat-chip>
     </div>
   </mat-card-header>
@@ -57,27 +57,32 @@
 
       <ng-container matColumnDef="price">
         <mat-header-cell *matHeaderCellDef> Prix</mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.price }} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.price | number:'1.2-2' }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
         <mat-cell *matCellDef="let element">
-          <mat-select [value]="element.status" (selectionChange)="changeStatusService($event.value, element.id)">
+          <mat-select [value]="element.status" (selectionChange)="changeStatusService($event.value, element.id)" *ngIf="role && role === 'mecanicien'">
             <mat-option value="pending">⏳ En attente</mat-option>
             <mat-option value="in progress">🔄 En cours</mat-option>
             <mat-option value="completed">✅ Terminé</mat-option>
           </mat-select>
+
+          <mat-chip *ngIf="role && role !== 'mecanicien'">{{element.status}}</mat-chip>
         </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
         <mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" matTooltip="Modifier" *ngIf="role && ['manager', 'mecanicien'].includes(role)">
-            <mat-icon>edit</mat-icon>
+          <button mat-icon-button color="primary" matTooltip="Définir les pièces" *ngIf="role && role === 'mecanicien'" (click)="openAddPartsToServiceDialog(element.id, element.parts)">
+            <mat-icon>add</mat-icon>
           </button>
-          <button mat-icon-button color="warn" matTooltip="Annuler">
+          <button mat-icon-button color="primary" matTooltip="Définir les pièces" *ngIf="role && ['manager', 'user'].includes(role)" (click)="openAddPartsToServiceDialog(element.id, element.parts)">
+            <mat-icon>settings_applications</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" matTooltip="Annuler" *ngIf="role && role === 'user'">
             <mat-icon>cancel</mat-icon>
           </button>
         </mat-cell>
@@ -88,6 +93,8 @@
       ></mat-header-row>
       <mat-row *matRowDef="let row; columns: serviceDisplayedColumn"></mat-row>
     </mat-table>
+
+    <h5>Prix Total: {{ 25000 | number:'1.2-2' }} MGA</h5>
   </mat-card-content>
 </mat-card>
 <mat-card class="w-100">
